# trabalho-3-concordo-deriki-julio

./: CMakeLists.txt  README.md
data/: 1.txt  script_comandos.txt  script_teste_generico.txt
data_expected/: A1.0_OUT.txt  A1.2_OUT.txt  A1.3_OUT.txt  A1.4_OUT.txt  A2.1_OUT.txt  A2.2_OUT.txt  A2.3_OUT.txt  A2.4_OUT.txt  A2.5_OUT.txt  A2.6_OUT.txt  A2.7_OUT.txt  B1.1_OUT.txt  B1.2_OUT.txt  B1.3_OUT.txt  B1.4_OUT.txt  B1.5_OUT.txt  B2.1_OUT.txt  B2.2_OUT.txt  in1_OUT.txt
data_in/: A1.0.txt  A1.2.txt  A1.3.txt  A1.4.txt  A2.1.txt  A2.2.txt  A2.3.txt  A2.4.txt  A2.5.txt  A2.6.txt  A2.7.txt  B1.1.txt  B1.2.txt  B1.3.txt  B1.4.txt  B1.5.txt  B2.1.txt  B2.2.txt  in1.txt  in2.txt
include/: CanalTexto.hpp  Executor.hpp  Mensagem.hpp  Servidores.hpp  Sistema.hpp  Usuario.hpp
src/: CanalTexto.cpp  Concordo.cpp  Executor.cpp  Mensagem.cpp  Servidores.cpp  Sistema.cpp  Usuario.cpp
